--- a/samp-dist.qmd
+++ b/samp-dist.qmd
@@ -183,7 +183,7 @@ ggplot(data = means_df, aes(x = means)) +
 
 **Exercise 4**. Increase the sample size to 50 and then reconstruct the sampling distribution of the sample mean for $n = 50$. How do the results (mean, standard deviation, and probabilities) change? Do the changes make sense and do they match the theoretical result from Stat 325?
 
-## Lab 1.2: Sampling Distribution for a non-Normal Population
+## Lab 1.2: Samp. Dist. with a Non-Normal Population
 
 Now consider an Exponential($\lambda$ = 0.5) population. Go back to a sample size of $n = 5$ and continue calculating the sample mean, $\bar{y}$. Before beginning, you should make sure to load in the `tidyverse` library again so that we can make some plots:
 
@@ -271,7 +271,7 @@ ggplot(data = means_df, aes(x = means)) +
 
 **Exercise 4**. In general, what are some other ways you could summarise a sample of data? (i.e., other calculations you could do?)
 
-## Lab 1.3: Sampling Distribution of the Sample Minimum
+## Lab 1.3: Samp. Dist. of the Sample Minimum
 
 Again, load in the `tidyverse` library so that we can make some plots!
 
@@ -378,3 +378,9 @@ means_df |>
 **Exercise 5**. Report the probability that the sample minimum is less than or equal to 9.5. How does it compare to the probability that the sample mean is less than or equal to 9.5? Does that make sense? Why or why not?
 
 **Exercise 6**. Increase the sample size to 50. Summarize how the sampling distribution of the sample minimum when $n = 50$ differs from when $n = 5$.
+
+## Mini Project 1: Sampling Distribution of the Sample Minimum and Maximum
+
+On our second day of class, we conducted a simulation to investigate the sampling distribution of the sample minimum ($Y_{min}$) when taking samples of $n = 5$ observations from a Normal($\mu = 10, \sigma^2 = 4$) population. For your recap of that day, you investigated the sampling distribution of the sample maximum ($Y_{max}$) from the same population (using the same sample size).
+
+Many of you noticed that, in this situation, SE($Y_{min} \approx$ SE($Y_{max}$), and many of you provided great explanations of why you thought that was true. The purpose of this mini-project assignment is for you to investigate this phenomenon to see if it is a result that holds more generally.
